2010-12-24  Joern Rennecke  <amylaar@spamcop.net>

contrib:
	* config-list.mk: New file.

2010-12-21  Joern Rennecke  <amylaar@spamcop.net>

	PR other/46677
gcc:
	* doc/tm.texi: Regenerate.
	* doc/tm.texi.in (SIZE_TYPE): Now an enum integer_type_kind value.
	(PTRDIFF_TYPE, WCHAR_TYPE, WINT_TYPE, INTMAX_TYPE): Likewise.
	(UINTMAX_TYPE, SIG_ATOMIC_TYPE, INT8_TYPE, INT16_TYPE): Likewise.
	(INT32_TYPE, INT64_TYPE, UINT8_TYPE, UINT16_TYPE): Likewise.
	(UINT32_TYPE, UINT64_TYPE, INT_LEAST8_TYPE): Likewise.
	(INT_LEAST16_TYPE, INT_LEAST32_TYPE, INT_LEAST64_TYPE): Likewise.
	(UINT_LEAST8_TYPE, UINT_LEAST16_TYPE, UINT_LEAST32_TYPE): Likewise.
	(UINT_LEAST64_TYPE, INT_FAST8_TYPE, INT_FAST16_TYPE): Likewise.
	(INT_FAST32_TYPE, INT_FAST64_TYPE, UINT_FAST8_TYPE): Likewise.
	(UINT_FAST16_TYPE, UINT_FAST32_TYPE, UINT_FAST64_TYPE): Likewise.
	(INTPTR_TYPE, UINTPTR_TYPE): Likewise.
	* defaults.h: Adjust for new *_TYPE definitions.
	(PID_TYPE): Now an enum integer_type_kind value.
	(CHAR16_TYPE, CHAR32_TYPE): Likewise.
	* tree.c (integer_type_names): New array.
	* tree.h (integer_type_names): Declare.
	* coretypes.h (enum integer_type_kind):
	Add comment about connection with integer_type_names.
	* config/alpha/alpha.h: Adjust for new *_TYPE definitions.
	* config/alpha/openbsd.h, config/alpha/osf5.h: Likewise.
	* config/frv/frv.h, config/s390/tpf.h, config/s390/linux.h: Likewise.
	* config/m32c/m32c.h, config/sparc/linux.h: Likewise.
	* config/sparc/sp64-elf.h, config/sparc/openbsd64.h: Likewise.
	* config/sparc/sp-elf.h, config/sparc/sol2-bi.h: Likewise.
	* config/sparc/sparc.h, config/sparc/linux64.h: Likewise.
	* config/sparc/netbsd-elf.h, config/sparc/sysv4.h: Likewise.
	* config/interix.h, config/vx-common.h, config/mep/mep.h: Likewise.
	* config/m32r/linux.h, config/m32r/m32r.h: Likewise.
	* config/openbsd-stdint.h, config/rx/rx.h: Likewise.
	* config/i386/cygming.h, config/i386/linux.h: Likewise.
	* config/i386/djgpp.h, config/i386/djgpp-stdint.h: Likewise.