@@ -1,9 +1,9 @@
 # Run tests covering all config.gcc cases.
 host_options='--with-mpc=/opt/cfarm/mpc' # gcc10
 # v850e1-elf is rejected by config.sub
-LIST = alpha-linux-gnu alpha-gnu alpha-freebsd alpha-netbsd alpha-openbsd \
+LIST = alpha-linux-gnu alpha-gnu alpha-freebsd6 alpha-netbsd alpha-openbsd \
   alpha-dec-osf5.1 alpha64-dec-vms alpha-dec-vms am33_2.0-linux arc-elf \
-  arm-wrs-vxworks arm-freebsd arm-netbsdelf arm-netbsd arm-linux \
+  arm-wrs-vxworks arm-freebsd6 arm-netbsdelf arm-netbsd arm-linux \
   arm-linux-androideabi arm-uclinux_eabi arm-ecos-elf arm-eabi \
   arm-symbianelf arm-rtems arm-elf arm-wince-pe arm-pe avr-rtems avr-elf \
   bfin-elf bfin-uclinux bfin-linux-uclibc bfin-rtems bfin-openbsd \
@@ -13,14 +13,14 @@ LIST = alpha-linux-gnu alpha-gnu alpha-freebsd alpha-netbsd alpha-openbsd \
   hppa2.0-hpux10.1 hppa64-hpux11.3 \
   hppa64-hpux11.0@--enable-sjlj-exceptions=yes hppa2.0-hpux11.9 \
   i686-pc-linux-gnu i686-apple-darwin i686-apple-darwin9 i686-apple-darwin10 \
-  i386-freebsd_aout i486-freebsd4 i686-freebsd i686-kfreebsd-gnu i386-netbsd \
+  i386-freebsd6.0_aout i486-freebsd4 i686-freebsd6 i686-kfreebsd-gnu i386-netbsd \
   i686-netbsdelf9 i686-knetbsd-gnu i686-openbsd i686-openbsd3.0 i686-elf \
   i686-kopensolaris-gnu i686-symbolics-gnu i686-pc-msdosdjgpp i686-lynxos \
   ix86-netware@--with-ld=nwld i686-nto-qnx i686-rtems \
   i686-solaris2.10@--enable-threads=solaris i686-wrs-vxworks \
   i686-wrs-vxworksae i686-pe@--enable-sjlj-exceptions=yes \
   i686-cygwin@--enable-threads=yes i686-mingw32crt i686-interix3 ia64-elf \
-  ia64-freebsd ia64-linux ia64-hpux ia64-hp-vms iq2000-elf lm32-elf \
+  ia64-freebsd6 ia64-linux ia64-hpux ia64-hp-vms iq2000-elf lm32-elf \
   lm32-rtems lm32-uclinux m32c-rtems m32c-elf m32r-elf m32rle-elf m32r-rtems \
   m32r-linux m32rle-linux m68hc11-elf m68hc12-elf m68k-elf m68k-netbsdef \
   m68k-openbsd m68k-uclinuxoldabi m68k-uclinux m68k-linux m68k-rtems \
@@ -32,7 +32,7 @@ LIST = alpha-linux-gnu alpha-gnu alpha-freebsd alpha-netbsd alpha-openbsd \
   mipsel-elf mips64-elf mips64vr-elf mips64orion-elf mips-rtems \
   mips-wrs-vxworks mipstx39-elf mmix-knuth-mmixware mn10300-elf moxie-elf \
   moxie-uclinux moxie-rtems pdp11-aout picochip-elf powerpc-darwin8 \
-  powerpc-darwin7 powerpc64-darwin powerpc-freebsd powerpc-netbsd \
+  powerpc-darwin7 powerpc64-darwin powerpc-freebsd6 powerpc-netbsd \
   powerpc-eabispe powerpc-eabisimaltivec powerpc-eabisim ppc-elf \
   powerpc-eabialtivec powerpc-xilinx-eabi powerpc-eabi \
   powerpc-rtems4.11@--enable-threads=yes powerpc-linux_spe \
@@ -48,27 +48,30 @@ LIST = alpha-linux-gnu alpha-gnu alpha-freebsd alpha-netbsd alpha-openbsd \
   sparc-leon3-linux-gnu@--enable-target=all sparc-netbsdelf \
   sparc-sun-solaris2@--enable-threads=solaris \
   sparc64-sun-solaris2.10@--with-gnu-ld@--with-gnu-as@--enable-threads=posix \
-  sparc-wrs-vxworks sparc64-elf sparc64-rtems sparc64-linux sparc64-freebsd \
+  sparc-wrs-vxworks sparc64-elf sparc64-rtems sparc64-linux sparc64-freebsd6 \
   sparc64-netbsd sparc64-openbsd spu-elf v850e-elf v850-elf vax-linux-gnu \
   vax-netbsdelf vax-netbsd vax-openbsd x86_64-apple-darwin \
   x86_64-pc-linux-gnu@--with-fpmath=avx \
-  x86_64-elf@--with-fpmath=sse x86_64-freebsd x86_64-netbsd \
+  x86_64-elf@--with-fpmath=sse x86_64-freebsd6 x86_64-netbsd \
   x86_64-knetbsd-gnu x86_64-w64-mingw32 \
   x86_64-mingw64-gnu@--enable-sjlj-exceptions=yes xstormy16-elf xtensa-elf \
   xtensa-linux
 
 all: $(LIST)
 
-.PHONEY: force
+.PHONEY: make-log-dir
 
 empty=
 
-force:
+#Check for the presence of the MAINTAINERS file to make sure we are in a
+#suitable current working direcrory.
+make-log-dir: ../gcc/MAINTAINERS
+	mkdir log
 
-$(LIST): force
+$(LIST): make-log-dir
 	-mkdir $@
-	cd $@ && \
+	(cd $@ && \
 	../../gcc/configure --target=$(subst @,$(empty) ,$@) \
-	--enable-werror-always ${host_options} --enable-languages=all,ada,go \
-	> config.out 2>&1 && \
-	$(MAKE) all-gcc > make.out 2>&1
+	--enable-werror-always ${host_options} --enable-languages=all,ada,go) \
+	> log/$@-config.out 2>&1
+	-$(MAKE) -C $@ all-gcc > log/$@-make.out 2>&1 && rm -r $@
